--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ tqdm
 requests
 optax >= 0.1.0, <= 0.1.2
 dm-haiku == 0.0.5
-chex >= 0.0.7, < 0.1.3
+chex >= 0.1.5
 jax >= 0.2.12
 jaxlib >= 0.1.68
 transformers >= 4.17
